--- a/index.html
+++ b/index.html
@@ -167,11 +167,8 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-            <!--<video width="640" height="360" controls>
-              <source src="assets/img/your-video.mp4" type="video/mp4">
-            </video>-->
             <img src="assets/img/business-intelligence.png" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+            <a href="https://youtu.be/nPbTWx905Ls?si=qjTI0ou9dRdcRJtg" class="glightbox pulsating-play-btn"></a>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
             <h3>BITogether is for BI enthusiasts.</h3>
