--- a/team.html
+++ b/team.html
@@ -93,7 +93,7 @@
               <div class="member-info text-center">
                 <h4>Nouhaila LACHGAR</h4>
                 <span>Owner</span>
-                <p>A BI passionate who created this community to link between other BI enthusiasts and experts and to provide all you need for a good learning journey</p>
+                <p>A BI enthusiast who created this community to connect with fellow BI professionals and provide everything you need for a successful learning journey.</p>
               </div>
             </div><!-- End Team Member -->
           </div>
